# parallel-job-scheduler

./: .gitignore  CMakeLists.txt  README.md  jobs.json  main.cpp
app/: main.cpp
include/scheduler/: Job.hpp  JobConfigLoader.hpp  JobPlanner.hpp  JobRunner.hpp  ParallelJobExecutor.hpp  ThreadPool.hpp
src/: JobConfigLoader.cpp  JobPlanner.cpp  JobRunner.cpp  ParallelJobExecutor.cpp  ThreadPool.cpp
tests/: JobPlannerTests.cpp
